--- a/css/index.css
+++ b/css/index.css
@@ -3,19 +3,40 @@
 font-family: 'Nunito', sans-serif;*/
 
 .w-100 {width: 100%; position: relative;}
-body {font-family: 'Nunito', sans-serif; font-size: 12px;}
+body {font-family: 'Nunito', sans-serif; font-size: 12px; height: 10000px;}
 h2,h3,h4,h5 {font-family: 'Montserrat', sans-serif;}
 a {text-decoration: none; color: inherit;}
 ul {list-style: none;}
-.wrapper {width: 1200px; margin: auto;}
-i {display: inline;}
-header {align-items: center; font-size: .9em; letter-spacing: 1px; width: 100%; font-family: 'Montserrat', sans-serif; padding: 0 15em; color: #f1f1f1; display: flex; justify-content: space-between; z-index: 5; position: absolute; top: 0; left: 0;}
+.wrapper {max-width: 1200px; margin: auto;}
+
+
+header {border-bottom: 1px solid rgb(255,255,255,.2); align-items: center; font-size: .8em; letter-spacing: 1px; width: 100%;font-weight: 600; font-family: 'Montserrat', sans-serif; padding: 0 15em; color: #f1f1f1; display: flex; justify-content: space-between; z-index: 5; position: absolute; top: 0; left: 0;}
 header nav {flex: 33.3333% 0 0; text-align: center;}
-header nav ul.navi { display: flex; justify-content: space-between;}
-header nav ul.navi >li {padding: 3em 0;}
+header nav ul.navi { display: flex; justify-content: space-around; align-items: center; padding-right: 7em;}
+header nav ul.navi >li { height: 100%; padding: 3.5em 0; position: relative; }
+header nav ul.navi >li >a {transition: all .7s; display: block; width: 100%; height: 100%;}
 header nav ul.navi >li >a>i{margin-left: .5em;}
-header .logo-wrap {flex: 33.3333% 0 0; text-align: center; position: absolute; left: 50%; top: 2em; transform: translateX(-50%);}
-header .sns-wrap {flex: 33.3333% 0 0; }
+header nav ul.navi >li>ul.sub {display: none; font-size: 1.1em; font-weight: 100;  color: #abaaaa; position: absolute; top: 7.4em; left: 0; text-align: left; background-color: #131212;}
+header nav ul.navi >li>ul.sub >li {position: relative; width: 30em; padding: 1.5em 1em 1.5em 1.5em; border-bottom: 1px solid #222; }
+
+header nav ul.navi >li>ul.sub >li:hover {color: #f1f1f1f1; background-color: #1a1919;}
+header nav ul.navi >li>ul.sub >li>a {display: block; width: 100%; height: 100%; display: flex; justify-content: space-between;}
+header nav ul.navi >li>ul.sub >li>a>i {padding-left: auto;}
+header nav ul.navi >li>ul.sub >li>ul.sub2 {display: none; position: absolute; left: 100%; top: 0; color: #abaaaa; background-color: #131212; }
+
+header nav ul.navi >li>ul.sub >li>ul.sub2>li{ width: 30em; padding: 1.5em 1em 1.5em 1.5em; border-bottom: 1px solid #222;}
+header nav ul.navi >li>ul.sub >li>ul.sub2>li:hover {color: #f1f1f1f1; background-color: #1a1919;}
+header .logo-wrap {flex: 33.3333% 0 0; position: absolute; left: 50%; top: 2em; transform: translateX(-50%);}
+header .sns-wrap {flex: 33.3333% 0 0; padding: 3.5em 0 3.5em 15em; }
 header .sns-wrap ul { display: flex;}
-header .sns-wrap ul li{justify-content: space-between; padding: 3em 0; display: flex;}
-header .sns-wrap ul li em {margin: 0 .7em;}
+header .sns-wrap ul li{transition: all .7s; cursor: pointer; display: flex; justify-content: space-between;}
+header nav ul.navi >li:hover>a,
+header .sns-wrap ul li:hover {opacity: .5;}
+header .sns-wrap ul li i {padding-right: .5em; border-right: 1px solid #f1f1f1;}
+header .sns-wrap ul li em {padding: 0 2em 0 .5em; line-height: 1;}
+header .sns-wrap ul li:last-child em {padding-right: 0;}
+.main-txt { font-family: 'Montserrat', sans-serif; width: 100%; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); text-align: center; color: #f1f1f1; }
+.main-txt p{padding-top: 3em;}
+.main-txt h1.main-title{font-weight: 900; font-size: 11em; }
+.main-txt h2{font-family: 'Nunito', sans-serif; font-size: 1.6em; font-weight: 100; padding: 1em 0; line-height: 1.7;}
+.main-txt .bt-green{}
