--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;900&family=Nunito&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;900&family=Nunito:wght@200;300&display=swap');
 /*  font-family: 'Montserrat', sans-serif;
 font-family: 'Nunito', sans-serif;*/
 
 .w-100 {width: 100%; position: relative;}
 body {font-family: 'Nunito', sans-serif; font-size: 12px; height: 10000px;}
-h2,h3,h4,h5 {font-family: 'Montserrat', sans-serif;}
+
 a {text-decoration: none; color: inherit;}
 ul {list-style: none;}
 .wrapper {max-width: 1200px; margin: auto;}
+p.title {font-family: 'Montserrat', sans-serif; font-size: .7em; font-weight: 600; letter-spacing: 1px; margin-bottom: .7em;}
+h2.title {font-family: 'Nunito', sans-serif; font-size: 1.6em; font-weight: 300; padding: 1em 0; line-height: 1.7;}
+h1.title {font-size: 4em; font-weight: 700; font-family: 'Montserrat', sans-serif; }
 
+.bg-wrap {width: 100%; height: 100vh; background-image: url(../img/bg-1.jpg); background-repeat: no-repeat; background-position: center; background-attachment: fixed;}
 
 header {border-bottom: 1px solid rgb(255,255,255,.2); align-items: center; font-size: .8em; letter-spacing: 1px; width: 100%;font-weight: 600; font-family: 'Montserrat', sans-serif; padding: 0 15em; color: #f1f1f1; display: flex; justify-content: space-between; z-index: 5; position: absolute; top: 0; left: 0;}
 header nav {flex: 33.3333% 0 0; text-align: center;}
@@ -34,9 +38,26 @@ header nav ul.navi >li:hover>a,
 header .sns-wrap ul li:hover {opacity: .5;}
 header .sns-wrap ul li i {padding-right: .5em; border-right: 1px solid #f1f1f1;}
 header .sns-wrap ul li em {padding: 0 2em 0 .5em; line-height: 1;}
-header .sns-wrap ul li:last-child em {padding-right: 0;}
-.main-txt { font-family: 'Montserrat', sans-serif; width: 100%; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); text-align: center; color: #f1f1f1; }
-.main-txt p{padding-top: 3em;}
+header .sns-wrap ul li:last-child {padding-right: 0;}
+
+.main-txt {padding-top: 7em; font-family: 'Montserrat', sans-serif; width: 100%; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); text-align: center; color: #f1f1f1; }
 .main-txt h1.main-title{font-weight: 900; font-size: 11em; }
 .main-txt h2{font-family: 'Nunito', sans-serif; font-size: 1.6em; font-weight: 100; padding: 1em 0; line-height: 1.7;}
-.main-txt .bt-green{}
+.main-txt .bt-green{font-family: 'Montserrat', sans-serif; padding: 1.7em 3em; background-color: rgba(208, 221, 161, 0.7); border: 0; border-radius: 30px; color: #f1f1f1; letter-spacing: 1px; font-size: .9em;}
+
+.story {text-align: center; padding: 13em 20em;}
+.story p.more {color: #888; font-size: 1.2em;}
+.story p.more>a {border-bottom: 1px solid #888;}
+
+
+.services {background-color: #f2f4ec; padding: 15em 0; text-align: center;}
+.services .services-wrap{width: 100%; overflow: hidden; display: flex; justify-content: space-between; margin-top: 5em;  }
+.services .services-wrap .service { flex: 31% 0 0;   }
+.services .img-wrap {height: 15em; width: 100%;}
+.services .txt-wrap {background-color: #fff; padding: 1em 3em;}
+
+.services .services-wrap .service h3.title{padding-top: 1em; font-family: 'Montserrat', sans-serif; font-size: 2.2em; font-weight: 700; }
+.services .services-wrap .service h2.txt {letter-spacing: 1px; padding: .5em 1em 2em 1em; font-size: 1.2em; font-weight: 600; line-height: 1.4;} 
+.services .services-wrap .service p.title{padding-bottom: 3em;}
+.services .services-wrap .web-design {}
+.services .services-wrap .Marketing {}
