--- a/css/index.css
+++ b/css/index.css
@@ -8,10 +8,10 @@ body {font-family: 'Nunito', sans-serif; font-size: 12px; height: 10000px;}
 a {text-decoration: none; color: inherit;}
 ul {list-style: none;}
 .wrapper {max-width: 1200px; margin: auto;}
-p.title {font-family: 'Montserrat', sans-serif; font-size: .7em; font-weight: 600; letter-spacing: 1px; margin-bottom: .7em;}
+p.title {cursor: pointer; font-family: 'Montserrat', sans-serif; font-size: .7em; font-weight: 600; letter-spacing: 1px; margin-bottom: .7em;}
 h2.title {font-family: 'Nunito', sans-serif; font-size: 1.6em; font-weight: 300; padding: 1em 0; line-height: 1.7;}
 h1.title {font-size: 4em; font-weight: 700; font-family: 'Montserrat', sans-serif; }
-
+.bt {font-weight: 600; font-family: 'Montserrat', sans-serif; padding: 1.7em 3em; border: 0; border-radius: 30px;letter-spacing: 1px; font-size: .9em;}
 .bg-wrap {width: 100%; height: 100vh; background-image: url(../img/bg-1.jpg); background-repeat: no-repeat; background-position: center; background-attachment: fixed;}
 
 header {border-bottom: 1px solid rgb(255,255,255,.2); align-items: center; font-size: .8em; letter-spacing: 1px; width: 100%;font-weight: 600; font-family: 'Montserrat', sans-serif; padding: 0 15em; color: #f1f1f1; display: flex; justify-content: space-between; z-index: 5; position: absolute; top: 0; left: 0;}
@@ -43,21 +43,32 @@ header .sns-wrap ul li:last-child {padding-right: 0;}
 .main-txt {padding-top: 7em; font-family: 'Montserrat', sans-serif; width: 100%; position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); text-align: center; color: #f1f1f1; }
 .main-txt h1.main-title{font-weight: 900; font-size: 11em; }
 .main-txt h2{font-family: 'Nunito', sans-serif; font-size: 1.6em; font-weight: 100; padding: 1em 0; line-height: 1.7;}
-.main-txt .bt-green{font-family: 'Montserrat', sans-serif; padding: 1.7em 3em; background-color: rgba(208, 221, 161, 0.7); border: 0; border-radius: 30px; color: #f1f1f1; letter-spacing: 1px; font-size: .9em;}
-
+.main-txt .bt-green{transition: all .7s; background-color: rgba(208, 221, 161, 0.7); color: #f1f1f1;}
+.main-txt .bt-green:hover {color: #666;}
 .story {text-align: center; padding: 13em 20em;}
 .story p.more {color: #888; font-size: 1.2em;}
 .story p.more>a {border-bottom: 1px solid #888;}
 
 
-.services {background-color: #f2f4ec; padding: 15em 0; text-align: center;}
+.services {background-color: #f2f4ec; padding: 13em 0 10em 0; text-align: center;}
 .services .services-wrap{width: 100%; overflow: hidden; display: flex; justify-content: space-between; margin-top: 5em;  }
 .services .services-wrap .service { flex: 31% 0 0;   }
-.services .img-wrap {height: 15em; width: 100%;}
+.services .img-wrap {height: 15em; width: 100%; position: relative;}
+.services .img-wrap i {transition: all .7s; font-size: 4.5em; position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%);}
+.services .img-wrap:hover i { top: 40%;}
 .services .txt-wrap {background-color: #fff; padding: 1em 3em;}
-
 .services .services-wrap .service h3.title{padding-top: 1em; font-family: 'Montserrat', sans-serif; font-size: 2.2em; font-weight: 700; }
 .services .services-wrap .service h2.txt {letter-spacing: 1px; padding: .5em 1em 2em 1em; font-size: 1.2em; font-weight: 600; line-height: 1.4;} 
-.services .services-wrap .service p.title{padding-bottom: 3em;}
-.services .services-wrap .web-design {}
-.services .services-wrap .Marketing {}
+.services .services-wrap .service p.title{padding-bottom: 3em; color: #666;}
+.services .wrapper >p.bot {text-align: center; width: 100%; margin: 0 auto; padding: 5em 0 1.5em 0; color: #aaa; line-height: 1.5; font-size: 1.2em;} 
+.services .wrapper .bt-white {transition: all .7s; border: 1px solid #ccc; background: transparent;  color: #666;}
+.services .wrapper .bt-white:hover {background-color: #111; color: #f1f1f1;}
+
+.gallery {text-align: center; padding: 13em 0;}
+.gallery p.title {letter-spacing: 3px;}
+.gallery h1.title {}
+.gallery ul.menu {font-family: 'Montserrat', sans-serif; padding: 7em 0 1em 0; display: flex; text-align: center; justify-content: center;}
+.gallery ul.menu li {font-size: .9em; position: relative; padding: 0 1.5em; font-weight: 600; letter-spacing: 1px;}
+.gallery ul.menu li .popper {transition: all .5s; opacity: 0;  position: absolute; left: 50%; transform: translateX(-50%); bottom: 0; padding: .7em 1.2em; background-color: #d2deb4; color: #f1f1f1; border-radius: 10%;}
+.gallery ul.menu li .popper::after { display: block; content: ""; width: 6px; height: 6px; transform: rotate(45deg) translateX(-50%); position: absolute; left: 50%; bottom: -5px; background-color: #d2deb4;}
+.gallery ul.menu li:hover .popper {opacity: 1; bottom: 30px;}
