--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,10 @@ ul {list-style: none;}
 p.title {cursor: pointer; font-family: 'Montserrat', sans-serif; font-size: .7em; font-weight: 600; letter-spacing: 1px; margin-bottom: .7em;}
 h2.title {font-family: 'Nunito', sans-serif; font-size: 1.6em; font-weight: 300; padding: 1em 0; line-height: 1.7;}
 h1.title {font-size: 4em; font-weight: 700; font-family: 'Montserrat', sans-serif; }
+h3.title{font-family: 'Montserrat', sans-serif; font-size: 2.2em; font-weight: 700; }
 .bt {font-weight: 600; font-family: 'Montserrat', sans-serif; padding: 1.7em 3em; border: 0; border-radius: 30px;letter-spacing: 1px; font-size: .9em;}
 .bg-wrap {width: 100%; height: 100vh; background-image: url(../img/bg-1.jpg); background-repeat: no-repeat; background-position: center; background-attachment: fixed;}
+p.bot {width: 100%; color: #aaa; line-height: 1.5; font-size: 1.2em;} 
 
 header {border-bottom: 1px solid rgb(255,255,255,.2); align-items: center; font-size: .8em; letter-spacing: 1px; width: 100%;font-weight: 600; font-family: 'Montserrat', sans-serif; padding: 0 15em; color: #f1f1f1; display: flex; justify-content: space-between; z-index: 5; position: absolute; top: 0; left: 0;}
 header nav {flex: 33.3333% 0 0; text-align: center;}
@@ -60,15 +62,73 @@ header .sns-wrap ul li:last-child {padding-right: 0;}
 .services .services-wrap .service h3.title{padding-top: 1em; font-family: 'Montserrat', sans-serif; font-size: 2.2em; font-weight: 700; }
 .services .services-wrap .service h2.txt {letter-spacing: 1px; padding: .5em 1em 2em 1em; font-size: 1.2em; font-weight: 600; line-height: 1.4;} 
 .services .services-wrap .service p.title{padding-bottom: 3em; color: #666;}
-.services .wrapper >p.bot {text-align: center; width: 100%; margin: 0 auto; padding: 5em 0 1.5em 0; color: #aaa; line-height: 1.5; font-size: 1.2em;} 
+.services .wrapper >p.bot {text-align: center; margin: 0 auto; padding: 5em 0 1.5em 0;} 
 .services .wrapper .bt-white {transition: all .7s; border: 1px solid #ccc; background: transparent;  color: #666;}
 .services .wrapper .bt-white:hover {background-color: #111; color: #f1f1f1;}
 
 .gallery {text-align: center; padding: 13em 0;}
 .gallery p.title {letter-spacing: 3px;}
 .gallery h1.title {}
-.gallery ul.menu {font-family: 'Montserrat', sans-serif; padding: 7em 0 1em 0; display: flex; text-align: center; justify-content: center;}
-.gallery ul.menu li {font-size: .9em; position: relative; padding: 0 1.5em; font-weight: 600; letter-spacing: 1px;}
-.gallery ul.menu li .popper {transition: all .5s; opacity: 0;  position: absolute; left: 50%; transform: translateX(-50%); bottom: 0; padding: .7em 1.2em; background-color: #d2deb4; color: #f1f1f1; border-radius: 10%;}
+
+.gallery ul.menu {font-family: 'Montserrat', sans-serif; padding: 7em 0 1.5em 0; display: flex; text-align: center; justify-content: center;}
+.gallery ul.menu li  {font-size: .9em; position: relative; padding: 0 1.5em; font-weight: 600; letter-spacing: 1px;}
+.gallery ul.menu li .popper { transition: all .5s; opacity: 0;  position: absolute; left: 50%; transform: translateX(-50%); bottom: 0; padding: .7em 1.2em; background-color: #d2deb4; color: #f1f1f1; border-radius: 10%;}
 .gallery ul.menu li .popper::after { display: block; content: ""; width: 6px; height: 6px; transform: rotate(45deg) translateX(-50%); position: absolute; left: 50%; bottom: -5px; background-color: #d2deb4;}
-.gallery ul.menu li:hover .popper {opacity: 1; bottom: 30px;}
+.gallery ul.menu li:hover .popper { opacity: 1; bottom: 30px;}
+.gallery ul.menu li:hover {color: #666;}
+.pager-wrap {}
+.pager-wrap .swiper-pagination-bullet {  padding: .5em; margin: 0 3em 1em 3em; }
+.pager-wrap .swiper-pagination-bullet-active {background-color: #888;}
+.prd {}
+.prd ul.prd { width: 100%; height: 100%;}
+.prd ul.prd> li{ width: 100%; height: 100%; }
+.prd ul.prd> li.active {display: block;}
+.prd ul.prd> li >ul{ display: flex; padding: 0 1em; width: 100%; flex-wrap: wrap;  justify-content: space-between;}
+.prd ul.prd> li >ul>li { box-sizing:border-box; margin: .5em 0; overflow: hidden; flex: 33% 0 0; }
+.prd ul.prd> li >ul>li>.img-bg { position: relative; cursor: pointer; width: 100%; height: 100%; }
+.prd ul.prd> li >ul>li>.img-bg .img-wrap { width: 100%; height: 100%;}
+.prd ul.prd> li >ul>li>.img-bg .prd-bg { position: absolute; top: -100%; padding-top: 15em; width: 100%; height: 100%; color: #e9e9e9; text-align: center; background-color: #282727; }
+
+.prd ul.prd> li:first-child .prd-bg i {transform: rotate(90deg);}
+.prd ul.prd> li>ul>li .prd-bg h3.title {margin: .5em 0 .25em 0;}
+
+.we-wrapper {background-color: #f2f4ec;}
+.we-wrapper .we-wrap{ padding: 9em 0 7em 0; display: flex; justify-content: space-between;}
+.we-wrapper .we-wrap .weare {flex: 33% 0 0; display: flex; justify-content: space-between; align-items: flex-start;}
+.we-wrapper .we-wrap .weare .icon-wrap  {}
+.we-wrapper .we-wrap .weare .txt-wrap  {padding: 0 5em 0 1em; text-align: left;}
+.we-wrapper .we-wrap .weare .txt-wrap p.title {letter-spacing: 1px; padding-bottom: 1em; text-align: left;}
+.we-wrapper .we-wrap .weare .txt-wrap p.bot {color: #666; line-height: 1.5;}
+
+
+.team-wrapper {text-align: center;}
+.team-wrapper p.title {letter-spacing: 3px; }
+.team-wrapper h1.title {margin-bottom: 1.5em;}
+.team-wrapper ul.team {display: flex; justify-content: space-between;}
+.team-wrapper ul.team li {margin: 1em; flex: 31% 0 0; width: 100%; height: 100%; position: relative;}
+.team-wrapper ul.team li .img-box{overflow: hidden;  width: 100%; height: 100%;}
+.team-wrapper ul.team li .img-box .bg-box {overflow: hidden; } 
+.team-wrapper ul.team li .img-box .bg-box img {transition: all .7s; } 
+.team-wrapper ul.team li:hover .img-box .bg-box img{transform: scale(1.2)}
+.team-wrapper ul.team li .img-box .txt-box{transition: all .7s; cursor: pointer; opacity: 0; position: absolute; left: 0; top: 0; margin: 5%; text-align: center; width: 90%; height: 90%; background-color: rgb(255,255,255,.9);}
+.team-wrapper ul.team li:hover .img-box .txt-box {overflow: hidden; opacity: 1;}
+.team-wrapper ul.team li .img-box .txt-box .txt { transition: all .7s; width: 100%; position: absolute; left: -50%; top: 50%; transform: translate(-50%,-50%);}
+.team-wrapper ul.team li .img-box .txt-box:hover .txt {left: 50%; width: 100%;}
+.team-wrapper ul.team li .img-box .txt-box .txt p.title {padding: 1em 0;}
+.team-wrapper ul.team li .img-box .txt-box .txt p.bot {padding: 0 4em;}
+.team-wrapper ul.team li .img-box .txt-box .txt i {padding: 1em .2em 0 .2em; cursor: pointer;}
+.team-wrapper ul.team li .img-box .txt-box .txt i:hover {color: #888;}
+.swiper-pagination { position: absolute; left: 50%;}
+.swiper-pagination .swiper-pagination-bullet {width: 0.5em; height: 0.5em; margin: .2em;  background-color: #666;}
+
+.review-wrapper {width: 100%; margin-top: 13em; background-color: #000;}
+.review-wrapper .review-wrap { width: 100%; color: #fff;}
+.review-wrapper .review-wrap ul.cnt {padding: 13em 3em 9em 3em; display: flex; justify-content: space-between;}
+.review-wrapper .review-wrap ul.cnt > li {flex: 23% 0 0; text-align: center;}
+.review-wrapper .review-wrap ul.cnt > li > p.bot {padding-top: .5em; font-weight: 500; color: #fff;}
+.review-wrapper .review-wrap .review-bg  {width: 100%; position: relative; padding: 12em 0; overflow: hidden;}
+.review-wrapper .review-wrap .review-bg .review-bg-wrap { position: absolute; left: 0; top: 0; }
+.review-wrapper .review-wrap .review-bg .review-bg-wrap img { opacity: .4;}
+.review-wrapper .review-wrap .review-bg .review-title {position: absolute; left: 50%; top: 0; opacity: 1;}
+.review-wrapper .review-wrap .review-bg ul.txt {position: absolute; left: 50%; top: 0; opacity: 1;}
+.review-wrapper .review-wrap .review-bg ul.txt >li {}
